@@ -49,7 +49,7 @@ void Extrae_set_options_Wrapper (int options);
 void Extrae_getrusage_set_to_0_Wrapper (UINT64 time);
 void Extrae_getrusage_Wrapper (void);
 void Extrae_memusage_Wrapper (void);
-void Extrae_user_function_Wrapper (int enter);
+void Extrae_user_function_Wrapper (unsigned enter);
 void Extrae_function_from_address_Wrapper (extrae_type_t type, void *address);
 
 void Extrae_next_hwc_set_Wrapper (void);
